@@ -1885,7 +1885,7 @@ static bool GemDOS_Open(Uint32 Params)
 	Mode = STMemory_ReadWord(Params+SIZE_LONG);
 	Mode &= 3;
 
-	LOG_TRACE(TRACE_OS_GEMDOS, "GEMDOS 0x3D Fopen(\"%s\", %s) at PC=0x%X\n",
+	LOG_TRACE(TRACE_OS_GEMDOS|TRACE_GEMDOS_FOPEN, "GEMDOS 0x3D Fopen(\"%s\", %s) at PC=0x%X\n",
 		  pszFileName, Modes[Mode], M68000_GetPC());
 
 	Drive = GemDOS_FileName2HardDriveID(pszFileName);
@@ -1893,7 +1893,7 @@ static bool GemDOS_Open(Uint32 Params)
 	if (!ISHARDDRIVE(Drive))
 	{
 		/* redirect to TOS */
-		LOG_TRACE(TRACE_OS_GEMDOS, "-> to TOS\n");
+		LOG_TRACE(TRACE_OS_GEMDOS|TRACE_GEMDOS_FOPEN, "-> to TOS\n");
 		return false;
 	}
 
@@ -1968,7 +1968,7 @@ static bool GemDOS_Open(Uint32 Params)
 
 		/* Return valid ST file handle from our range (BASE_FILEHANDLE upwards) */
 		Regs[REG_D0] = Index+BASE_FILEHANDLE;
-		LOG_TRACE(TRACE_OS_GEMDOS, "-> FD %d (%s -> %s)\n",
+		LOG_TRACE(TRACE_OS_GEMDOS|TRACE_GEMDOS_FOPEN, "-> FD %d (%s -> %s)\n",
 			  Regs[REG_D0], Modes[Mode], RealMode);
 		return true;
 	}
@@ -1990,7 +1990,7 @@ static bool GemDOS_Open(Uint32 Params)
 		/* File not found / error opening */
 		Regs[REG_D0] = GEMDOS_EFILNF;
 	}
-	LOG_TRACE(TRACE_OS_GEMDOS, "-> ERROR %d (errno = %d)\n", Regs[REG_D0], errno);
+	LOG_TRACE(TRACE_OS_GEMDOS|TRACE_GEMDOS_FOPEN, "-> ERROR %d (errno = %d)\n", Regs[REG_D0], errno);
 	return true;
 }
 
