@@ -81,6 +81,7 @@ Emulator:
   - Add trace support for IDE, MIDI and keymaps.  ACSI (SCSI) and IDE
     trace output shows primary partition tables for ACSI & IDE images
     (both Atari and DOS MBRs are supported)
+  - Add "fopen" trace option to trace just Fopen() calls (file opens)
   - Add "reset <hard|soft>" command
   - Add "save" subcommand to "history" command
   - Add "basepage" address variable
